bolded contact, fixed jumping in responsive menu

--- a/src/components/Header/NavBar.scss
+++ b/src/components/Header/NavBar.scss
@@ -37,7 +37,6 @@
     margin: 1rem 0;
     padding: 0 2rem;
 
-
     .nav-link {
       cursor: pointer;
 
@@ -72,73 +71,89 @@
   justify-content: center;
   align-items: center;
   background-color: $accent;
- 
 
-  svg {
+  .open-nav {
     width: 70%;
     height: 70%;
     color: white;
   }
 
-  .navbar-menu-content {
+  @media screen and (min-width: 901px) {
+    display: none;
+  }
+}
+.navbar-menu-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  padding: 1rem;
+  min-width: 85%;
+  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: $lightGrey;
+  z-index: 5;
+  box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+
+  &::after {
+    content: "";
     position: fixed;
     top: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 5;
-    padding: 1rem;
-    min-width: 85%;
-    height: 100vh;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 4;
+  }
+
+  .close-nav {
+    width: 35px;
+    height: 35px;
+    color: $whiteColor;
+    margin: 0.5rem 1.75rem;
+    z-index: 10;
+  }
+
+  ul {
+    font-family: $bodyFont;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: flex-end;
     flex-direction: column;
-    background-color: $mediumGrey;
-    box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+    padding-inline-start: 0;
 
-    svg {
-      width: 35px;
-      height: 35px;
-      color: white;
-      margin: 0.5rem 1rem;
-    }
+    li {
+      margin: 1rem;
+      padding-bottom: 1rem;
+      position: relative;
+      z-index: 7;
 
-    ul {
-      font-family: $bodyFont;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-      flex-direction: column;
-
-      li {
-        margin: 1rem;
-        padding-bottom: 1rem;
-
-        a {
-          color: white;
-          text-decoration: none;
-          font-size: 1rem;
-          text-transform: uppercase;
-          font-weight: 500;
-          transition: all 0.3s ease-in-out;
-        }
-        &:hover {
-          color: $accent;
-          border-bottom: 1px solid $accent;
-        }
+      a {
+        color: white;
+        text-decoration: none;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: 500;
+        transition: all 0.3s ease-in-out;
+      }
+      &:hover {
+        color: $accent;
+        border-bottom: 1px solid $accent;
       }
     }
-
-    @media screen and (min-width: 900px) {
-      display: none;
-    }
   }
-  @media screen and (min-width: 900px) {
+
+  @media screen and (min-width: 901px) {
     display: none;
   }
 }
